--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -22,4 +22,7 @@ jobs:
         java-version: '8'
         distribution: 'adopt'
     - name: Build with Ant
-      run: ant -noinput -buildfile build.xml
+      run: | 
+        echo &PATH
+        java -version
+        ant -noinput -buildfile build.xml
