--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -23,6 +23,6 @@ jobs:
         distribution: 'adopt'
     - name: Build with Ant
       run: | 
-        echo &PATH
+        echo $PATH
         java -version
         ant -noinput -buildfile build.xml
