--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -25,4 +25,5 @@ jobs:
       run: | 
         echo $PATH
         java -version
-        ant -noinput -buildfile build.xml
+        java -cp java CDBookListWindow
+        echo Test Completed!
